avro_derive/tests/ui/avro_rs_373_skip.rs
use apache_avro::AvroSchema;

#[derive(AvroSchema)]
struct Foo {
    #[avro(skip)]
    a: String,
    b: i32,
}

pub fn main() {}
